CM-319: Support array cast from Double to Float and vv